unified_tests/functions/unknown_type_parameter/expect/build.text.stderr
lib.copp:1:29: error: unknown type 'U'
  function identity[T](value: U) -> T {
                              ^
